--- a/AppCloudBlog.Api/appsettings.json
+++ b/AppCloudBlog.Api/appsettings.json
@@ -6,11 +6,16 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "DefaultConnection": "Server=.;Database=AppCloudBlogDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;" },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=AppCloudBlogDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  },
   "ApiSettings": {
     "Secret": "JWT_token_API_Secret_Key_N43DxO9JJp9lrm3-BdDf2nDHsKHSdbSkiqOU7_5RLwKDvUarRjP6OVINxA",
     "ExpiryDays": 7,
     "Issuer": "AppCloudBlog",
     "Audience": "AppCloudBlogUsers"
+  },
+  "Cors": {
+    "AllowedOrigins": [ "https://localhost:7056" ]
   }
 }
